cbp-helm-llms/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corellms.prod.bangpdk.dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://"
spec:
  ingressClassName: nginx
  rules:
  - host: corellms.prod.bangpdk.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: be-chatbot-service
            port:
              number: 1234
